--- a/jflex/examples/cup-java/pom.xml
+++ b/jflex/examples/cup-java/pom.xml
@@ -10,8 +10,8 @@
     It uses JFlex and CUP.</description>
   <dependencies>
     <dependency>
-      <groupId>de.jflex</groupId>
-      <artifactId>cup_runtime</artifactId>
+      <groupId>com.github.vbmacher</groupId>
+      <artifactId>java-cup-runtime</artifactId>
       <version>11b-20160615</version>
     </dependency>
     <dependency>
@@ -55,7 +55,7 @@
       <plugin>
         <groupId>de.jflex</groupId>
         <artifactId>cup-maven-plugin</artifactId>
-        <version>1.1</version>
+        <version>1.2</version>
         <executions>
           <execution>
             <goals>
@@ -87,7 +87,7 @@
               </transformers>
               <artifactSet>
                 <includes>
-                  <include>de.jflex:cup_runtime</include>
+                  <include>com.github.vbmacher:java-cup-runtime</include>
                 </includes>
               </artifactSet>
             </configuration>
