--- a/jflex/examples/cup-lcalc/pom.xml
+++ b/jflex/examples/cup-lcalc/pom.xml
@@ -23,8 +23,8 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>de.jflex</groupId>
-      <artifactId>cup_runtime</artifactId>
+      <groupId>com.github.vbmacher</groupId>
+      <artifactId>java-cup-runtime</artifactId>
       <version>11b-20160615</version>
     </dependency>
   </dependencies>
@@ -56,7 +56,7 @@
       <plugin>
         <groupId>de.jflex</groupId>
         <artifactId>cup-maven-plugin</artifactId>
-        <version>1.1</version>
+        <version>1.2</version>
         <executions>
           <execution>
             <goals>
@@ -91,7 +91,7 @@
               </transformers>
               <artifactSet>
                 <includes>
-                  <include>de.jflex:cup_runtime</include>
+                  <include>com.github.vbmacher:java-cup-runtime</include>
                 </includes>
               </artifactSet>
             </configuration>
