--- a/jflex/pom.xml
+++ b/jflex/pom.xml
@@ -53,8 +53,8 @@
   </developers>
   <dependencies>
     <dependency>
-      <groupId>de.jflex</groupId>
-      <artifactId>cup_runtime</artifactId>
+      <groupId>com.github.vbmacher</groupId>
+      <artifactId>java-cup-runtime</artifactId>
       <version>${cup.version}</version>
     </dependency>
     <dependency>
@@ -184,7 +184,7 @@
               <finalName>${project.artifactId}-full-${project.version}</finalName>
               <artifactSet>
                 <includes>
-                  <include>de.jflex:cup_runtime</include>
+                  <include>com.github.vbmacher:java-cup-runtime</include>
                 </includes>
               </artifactSet>
             </configuration>
