--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,6 @@
   </developers>
 
   <modules>
-    <module>cup</module>
     <module>cup-maven-plugin</module>
     <module>jflex-unicode-maven-plugin</module>
     <module>jflex</module>
@@ -137,13 +136,13 @@
         <version>2.6</version>
       </dependency>
       <dependency>
-        <groupId>de.jflex</groupId>
-        <artifactId>cup</artifactId>
+        <groupId>com.github.vbmacher</groupId>
+        <artifactId>java-cup</artifactId>
         <version>${cup.version}</version>
       </dependency>
       <dependency>
-        <groupId>de.jflex</groupId>
-        <artifactId>cup_runtime</artifactId>
+        <groupId>com.github.vbmacher</groupId>
+        <artifactId>java-cup-runtime</artifactId>
         <version>${cup.version}</version>
       </dependency>
       <dependency>
@@ -201,7 +200,7 @@
         <plugin>
           <groupId>de.jflex</groupId>
           <artifactId>cup-maven-plugin</artifactId>
-          <version>1.1</version>
+          <version>1.2</version>
         </plugin>
         <plugin>
           <groupId>com.coveo</groupId>
