add java-cup and java-cup-runtime to bazel third_party deps

--- a/javatests/jflex/testcase/cupsym/BUILD.bazel
+++ b/javatests/jflex/testcase/cupsym/BUILD.bazel
@@ -19,8 +19,8 @@ java_library(
         ":gen_cupsym_scanner",
     ],
     deps = [
-        "//cup/cup_runtime",
         "//java/jflex/testing/testsuite/golden",
+        "//third_party/com/github/vbmacher/java-cup-runtime:cup_runtime",
         "//third_party/com/google/guava",
     ],
 )
