--- a/jflex/examples/cup-lcalc/pom.xml
+++ b/jflex/examples/cup-lcalc/pom.xml
@@ -42,7 +42,7 @@
       <plugin>
         <groupId>de.jflex</groupId>
         <artifactId>jflex-maven-plugin</artifactId>
-        <version>1.8.1-SNAPSHOT</version>
+        <version>1.8.1</version>
         <executions>
           <execution>
             <goals>
