--- a/jflex/examples/simple/pom.xml
+++ b/jflex/examples/simple/pom.xml
@@ -39,7 +39,7 @@
       <plugin>
         <groupId>de.jflex</groupId>
         <artifactId>jflex-maven-plugin</artifactId>
-        <version>1.8.1</version>
+        <version>1.9.0-SNAPSHOT</version>
         <executions>
           <execution>
             <goals>
