--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>de.jflex</groupId>
   <artifactId>jflex-parent</artifactId>
   <name>JFlex parent and aggregator POM</name>
-  <version>1.8.1</version>
+  <version>1.9.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <url>https://jflex-de.github.io/jflex/</url>
   <description>JFlex parent and aggregator POM</description>
