--- a/testsuite/testcases/pom.xml
+++ b/testsuite/testcases/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>de.jflex</groupId>
     <artifactId>jflex-parent</artifactId>
-    <version>1.8.1</version>
+    <version>1.9.0-SNAPSHOT</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
   <artifactId>jflex-testsuite-testcases</artifactId>
