--- a/javatests/jflex/ucd_generator/scanner/BUILD.bazel
+++ b/javatests/jflex/ucd_generator/scanner/BUILD.bazel
@@ -1,10 +1,23 @@
 java_test(
-    name = "UnicodeDataScannerTest",
-    srcs = ["UnicodeDataScannerTest.java"],
+    name = "DerivedAgeScannerTest",
+    srcs = ["DerivedAgeScannerTest.java"],
+    deps = [
+        "//java/jflex/ucd_generator/scanner:ucd_scanners",
+        "//java/jflex/ucd_generator/scanner/model",
+        "//java/jflex/ucd_generator/ucd",
+        "//javatests/jflex/ucd_generator:tested_versions",
+        "//third_party/com/google/guava",
+        "//third_party/com/google/truth",
+    ],
+)
+
+java_test(
+    name = "UnicodeDataScannerIntegrationTest",
+    srcs = ["UnicodeDataScannerIntegrationTest.java"],
     data = [
-        "//third_party/unicode:ucd_4_1_0",
         "//third_party/unicode:ucd_10",
-        ],
+        "//third_party/unicode:ucd_4_1_0",
+    ],
     deps = [
         "//java/jflex/ucd_generator/scanner:ucd_scanners",
         "//java/jflex/ucd_generator/scanner/model",
