--- a/java/jflex/ucd_generator/scanner/BUILD.bazel
+++ b/java/jflex/ucd_generator/scanner/BUILD.bazel
@@ -1,40 +1,40 @@
 load("@jflex_rules//jflex:jflex.bzl", "jflex")
 
 java_library(
-    name = "unicode_data_scanner",
+    name = "ucd_scanners",
     srcs = [
-        ":gen_unicode_data_scanner",
+        "AbstractBinaryPropertiesFileScanner.java",
+        "AbstractEnumeratedPropertyFileScanner.java",
+        "AbstractPropertyAliasesScanner.java",
+        "AbstractPropertyValueAliasesScanner.java",
+        "AbstractScriptExtensionsScanner.java",
+        "AbstractUnicodeDataScanner.java",
+        "DerivedAgeScanner.java",
+        ":gen_ucd_scanners",
     ],
     visibility = [
         "//java/jflex/ucd_generator:__subpackages__",
         "//javatests/jflex:__subpackages__",
     ],
     deps = [
-        ":unicode_data",
+        "//java/jflex/ucd_generator/scanner/model",
         "//java/jflex/ucd_generator/ucd",
+        "//java/jflex/ucd_generator/util:name_normalizer",
+        "//java/jflex/ucd_generator/util:surrogate_utils",
+        "//third_party/com/google/guava",
     ],
 )
 
 jflex(
-    name = "gen_unicode_data_scanner",
+    name = "gen_ucd_scanners",
     srcs = glob(["*.flex"]),
     outputs = [
+        "BinaryPropertiesFileScanner.java",
+        "EnumeratedPropertyFileScanner.java",
+        "PropertyAliasesScanner.java",
+        "PropertyValueAliasesScanner.java",
+        "ScriptExtensionsScanner.java",
         "UnicodeDataScanner.java",
     ],
     visibility = ["//java/jflex/ucd_generator:__subpackages__"],
-)
-
-java_library(
-    name = "unicode_data",
-    srcs = ["UnicodeData.java"],
-    visibility = [
-        "//java/jflex/ucd_generator:__subpackages__",
-        "//javatests/jflex:__subpackages__",
-    ],
-    deps = [
-        "//java/jflex/ucd_generator/ucd",
-        "//java/jflex/ucd_generator/util:hexa_utils",
-        "//third_party/com/google/auto_value",
-        "//third_party/com/google/guava",
-    ],
 )
