--- a/java/jflex/ucd_generator/scanner/model/BUILD.bazel
+++ b/java/jflex/ucd_generator/scanner/model/BUILD.bazel
@@ -1,14 +1,16 @@
 java_library(
-    name = "ucd",
-    srcs = glob(["*.java"]),
+    name = "model",
+    srcs =
+        glob(["*.java"]),
     visibility = [
         "//java/jflex/ucd_generator:__subpackages__",
-        "//javatests/jflex/ucd_generator:__subpackages__",
+        "//javatests/jflex:__subpackages__",
     ],
     deps = [
+        "//java/jflex/ucd_generator/ucd",
         "//java/jflex/ucd_generator/util:hexa_utils",
         "//java/jflex/ucd_generator/util:name_normalizer",
-        "//third_party/com/google/auto_value",
+        "//java/jflex/ucd_generator/util:surrogate_utils",
         "//third_party/com/google/guava",
     ],
 )
