Remove old  skeleton.nested

--- a/jflex/pom.xml
+++ b/jflex/pom.xml
@@ -124,7 +124,7 @@
               <goal>generate</goal>
             </goals>
             <configuration>
-              <skeleton>src/main/jflex/skeleton.nested-1.8.0</skeleton>
+              <skeleton>src/main/jflex/skeleton.nested</skeleton>
             </configuration>
           </execution>
         </executions>
