--- a/.bazelrc
+++ b/.bazelrc
@@ -147,8 +147,7 @@ build --javacopt "-Xep:BoxedPrimitiveConstructor:ERROR"
 build --javacopt "-Xep:ByteBufferBackingArray:ERROR"
 build --javacopt "-Xep:CannotMockFinalClass:ERROR"
 build --javacopt "-Xep:CanonicalDuration:ERROR"
-# TODO(#469) Fix these warnings
-build --javacopt "-Xep:CatchAndPrintStackTrace:WARN"
+build --javacopt "-Xep:CatchAndPrintStackTrace:ERROR"
 build --javacopt "-Xep:CatchFail:WARN"
 build --javacopt "-Xep:ClassCanBeStatic:ERROR"
 build --javacopt "-Xep:ClassNewInstance:WARN"
