Increase ConstructorInvokesOverridable to ERROR

--- a/.bazelrc
+++ b/.bazelrc
@@ -298,8 +298,7 @@ build --javacopt "-Xep:AssertFalse:ERROR"
 build --javacopt "-Xep:AssistedInjectAndInjectOnConstructors:ERROR"
 build --javacopt "-Xep:BinderIdentityRestoredDangerously:ERROR"
 build --javacopt "-Xep:BindingToUnqualifiedCommonType:ERROR"
-# TODO(#469) Fix these errors and re-enable violation
-build --javacopt "-Xep:ConstructorInvokesOverridable:OFF"
+build --javacopt "-Xep:ConstructorInvokesOverridable:ERROR"
 build --javacopt "-Xep:ConstructorLeaksThis:ERROR"
 build --javacopt "-Xep:EmptyTopLevelDeclaration:WARN"
 build --javacopt "-Xep:EqualsBrokenForNull:ERROR"
