Add default case to switch statements https://errorprone.info/bugpattern/MissingDefault

--- a/.bazelrc
+++ b/.bazelrc
@@ -310,8 +310,7 @@ build --javacopt "-Xep:InconsistentOverloads:OFF"
 build --javacopt "-Xep:InvalidParam:ERROR"
 build --javacopt "-Xep:InvalidTag:ERROR"
 build --javacopt "-Xep:InvalidThrows:ERROR"
-# TODO(#469) Fix these errors and re-enable violation
-build --javacopt "-Xep:MissingDefault:OFF"
+build --javacopt "-Xep:MissingDefault:ERROR"
 build --javacopt "-Xep:MutableMethodReturnType:WARN"
 build --javacopt "-Xep:NoFunctionalReturnType:ERROR"
 build --javacopt "-Xep:NonCanonicalStaticMemberImport:ERROR"
