Enable UnusedException as ERROR
Fix violations when possible
SuppressWarnings otherwise

--- a/.bazelrc
+++ b/.bazelrc
@@ -328,8 +328,7 @@ build --javacopt "-Xep:SystemExitOutsideMain:WARN"
 build --javacopt "-Xep:TestExceptionChecker:ERROR"
 build --javacopt "-Xep:UnnecessaryDefaultInEnumSwitch:WARN"
 build --javacopt "-Xep:Unused:ERROR"
-# TODO(#469) Fix these warnings
-build --javacopt "-Xep:UnusedException:OFF"
+build --javacopt "-Xep:UnusedException:ERROR"
 # TODO(#469) Fix these warnings
 # bazel-out/darwin-fastbuild/genfiles/jflex/LexParse.java:2260: error: [Var] Non-constant variable missing @Var annotation
 #     RegExp RESULT =null;
