--- a/javatests/jflex/testcase/cupsym/BUILD.bazel
+++ b/javatests/jflex/testcase/cupsym/BUILD.bazel
@@ -20,8 +20,8 @@ java_library(
     ],
     deps = [
         "//java/jflex/testing/testsuite/golden",
-        "//third_party/com/github/vbmacher/java-cup-runtime:cup_runtime",
         "//third_party/com/google/guava",
+        "//third_party/java_cup:runtime",
     ],
 )
 
