Improve error handling of file not found in ucd_generator

--- a/java/jflex/ucd_generator/BUILD.bazel
+++ b/java/jflex/ucd_generator/BUILD.bazel
@@ -27,6 +27,7 @@ java_binary(
     deps = [
         ":ucd_generator",
         "//java/jflex/ucd_generator/ucd",
+        "//third_party/com/google/guava",
     ],
 )
 
