Fix substract of self

--- a/java/jflex/ucd_generator/util/BUILD.bazel
+++ b/java/jflex/ucd_generator/util/BUILD.bazel
@@ -17,6 +17,7 @@ java_library(
         "//javatests/jflex:__subpackages__",
     ],
     deps = [
+        "//third_party/com/google/guava",
     ],
 )
 
