Based tests on ucd_5_0 instead

--- a/javatests/jflex/ucd_generator/BUILD.bazel
+++ b/javatests/jflex/ucd_generator/BUILD.bazel
@@ -17,6 +17,9 @@ java_test(
         "//java/jflex/ucd_generator/ucd",
         "//third_party/com/google/truth",
     ],
+    data =  [
+        "//third_party/unicode:ucd_5_0_0",
+    ]
 )
 
 java_library(
