--- a/java/jflex/ucd_generator/BUILD.bazel
+++ b/java/jflex/ucd_generator/BUILD.bazel
@@ -10,6 +10,7 @@ java_library(
     deps = [
         "//java/jflex/ucd_generator/emitter/unicode_properties",
         "//java/jflex/ucd_generator/emitter/unicode_version",
+        "//java/jflex/ucd_generator/scanner:exception",
         "//java/jflex/ucd_generator/scanner:ucd_scanners",
         "//java/jflex/ucd_generator/scanner/model",
         "//java/jflex/ucd_generator/ucd",
