Progress on UCD generator (#752)
* Emit the `propertyValues`
   * Keep intervals sorted
   * Clone Script/sc property value aliases => Script_Extensions/scx
   * Script extensions
   * almost correct, with a few differences compare to the jflex-unicode-maven-plugin
     > Content differs on line 218:
     > : expected:<    "c[c]",> but was:<    "c[asefolding]",>
     > Expected :    "c[c]",
     > Actual   :    "c[asefolding]",

* `intervals` are getting there
  * intervals for age=1.1 are correct
  * intervals for age=2 have a few extra ranges

* `propertyValueAliases` are not  correct

* `caselessMatchPartitions`  are  correct

* Improve error handling of file not found in ucd_generator

* New CodepointRangeSet.substract().

* Sort intervals in natural (alphabetical)  order.

* Base integration tests on ucd_6_0 (ucd 5 doesn't have scriptextensions)

* Delete the individual scanner tests.
   The test only makes sense after previous scanners (e.g. Property aliases) have been executed.

--- a/java/jflex/ucd_generator/BUILD.bazel
+++ b/java/jflex/ucd_generator/BUILD.bazel
@@ -10,6 +10,7 @@ java_library(
     deps = [
         "//java/jflex/ucd_generator/emitter/unicode_properties",
         "//java/jflex/ucd_generator/emitter/unicode_version",
+        "//java/jflex/ucd_generator/scanner:exception",
         "//java/jflex/ucd_generator/scanner:ucd_scanners",
         "//java/jflex/ucd_generator/scanner/model",
         "//java/jflex/ucd_generator/ucd",
@@ -27,6 +28,7 @@ java_binary(
     deps = [
         ":ucd_generator",
         "//java/jflex/ucd_generator/ucd",
+        "//third_party/com/google/guava",
     ],
 )
 
