--- a/javatests/jflex/ucd_generator/BUILD.bazel
+++ b/javatests/jflex/ucd_generator/BUILD.bazel
@@ -1,16 +1,25 @@
 java_test(
     name = "UcdGeneratorIntegrationTest",
     srcs = ["UcdGeneratorIntegrationTest.java"],
+    data = [
+        "Unicode_5_0.java.golden",
+        "//third_party/unicode:ucd_5_0_0",
+    ],
     deps = [
         ":tested_versions",
+        "//java/jflex/testing/diff",
         "//java/jflex/ucd_generator",
+        "//java/jflex/ucd_generator/ucd",
         "//third_party/com/google/truth",
     ],
 )
 
 java_test(
-    name = "UcdScannerTest",
-    srcs = ["UcdScannerTest.java"],
+    name = "UcdScannerIntegrationTest",
+    srcs = ["UcdScannerIntegrationTest.java"],
+    data = [
+        "//third_party/unicode:ucd_6_0_0",
+    ],
     deps = [
         ":tested_versions",
         "//java/jflex/ucd_generator",
