--- a/jflex/examples/standalone/pom.xml
+++ b/jflex/examples/standalone/pom.xml
@@ -37,7 +37,7 @@ of "hello" by "hello &lt;name&gt; !".</description>
       <plugin>
         <groupId>de.jflex</groupId>
         <artifactId>jflex-maven-plugin</artifactId>
-        <version>1.8.2</version>
+        <version>1.9.0-SNAPSHOT</version>
         <executions>
           <execution>
             <goals>
