--- a/javatests/jflex/testcase/eofclose/BUILD.bazel
+++ b/javatests/jflex/testcase/eofclose/BUILD.bazel
@@ -20,6 +20,7 @@ java_library(
     deps = [
         "//java/jflex/testing/testsuite/golden",
         "//third_party/com/google/guava",
+        "//third_party/java:jsr250",
     ],
 )
 
@@ -40,6 +41,7 @@ java_library(
     deps = [
         "//java/jflex/testing/testsuite/golden",
         "//third_party/com/google/guava",
+        "//third_party/java:jsr250",
     ],
 )
 
