--- a/javatests/jflex/testcase/generics/BUILD.bazel
+++ b/javatests/jflex/testcase/generics/BUILD.bazel
@@ -19,6 +19,7 @@ java_library(
     deps = [
         "//java/jflex/testing/testsuite/golden",
         "//third_party/com/google/guava",
+        "//third_party/java:jsr250",
     ],
 )
 
@@ -55,6 +56,7 @@ java_library(
     deps = [
         "//java/jflex/testing/testsuite/golden",
         "//third_party/com/google/guava",
+        "//third_party/java:jsr250",
     ],
 )
 
@@ -91,6 +93,7 @@ java_library(
     deps = [
         "//java/jflex/testing/testsuite/golden",
         "//third_party/com/google/guava",
+        "//third_party/java:jsr250",
     ],
 )
 
@@ -127,6 +130,7 @@ java_library(
     deps = [
         "//java/jflex/testing/testsuite/golden",
         "//third_party/com/google/guava",
+        "//third_party/java:jsr250",
     ],
 )
 
