--- a/javatests/jflex/testcase/caseless_jlex/BUILD.bazel
+++ b/javatests/jflex/testcase/caseless_jlex/BUILD.bazel
@@ -22,6 +22,7 @@ java_library(
     deps = [
         "//java/jflex/testing/testsuite/golden",
         "//third_party/com/google/guava",
+        "//third_party/java:jsr250",
     ],
 )
 
