--- a/javatests/jflex/testcase/charclass/BUILD.bazel
+++ b/javatests/jflex/testcase/charclass/BUILD.bazel
@@ -17,6 +17,7 @@ java_test(
     deps = [
         "//third_party/com/google/guava",
         "//third_party/com/google/truth",
+        "//third_party/java:jsr250",
     ],
 )
 
