--- a/javatests/jflex/testcase/large_input/BUILD.bazel
+++ b/javatests/jflex/testcase/large_input/BUILD.bazel
@@ -26,6 +26,7 @@ java_library(
     deps = [
         "//java/jflex/testing/testsuite/golden",
         "//third_party/com/google/guava",
+        "//third_party/java:jsr250",
     ],
 )
 
