--- a/javatests/jflex/testcase/macro_exp/BUILD.bazel
+++ b/javatests/jflex/testcase/macro_exp/BUILD.bazel
@@ -21,6 +21,7 @@ java_library(
     deps = [
         "//java/jflex/testing/testsuite/golden",
         "//third_party/com/google/guava",
+        "//third_party/java:jsr250",
     ],
 )
 
